# Sentia

./: .gitignore  Modifikasi Arsitektur Transformer.docx  Project Sentium Brainstorm Research Output.md  Project Sentium Brainstorm.md  Project Sentium.md  README.md  pyproject.toml  requirements.txt  sentium_colab.ipynb  train_baseline.py  train_colab.py
paper/: build.bat  sentium.bib  sentium.tex  sentium_arch.dot
sentium/: __init__.py  config.py  tokenizer.py
sentium/core/: __init__.py  attention.py  embedding.py  feedforward.py  layer.py  normalization.py
sentium/eval/: __init__.py  benchmark.py
sentium/models/: __init__.py  baseline.py
sentium/ops/: __init__.py  nystrom.py  sinkhorn.py
sentium/train/: __init__.py  trainer.py
tests/: test_model.py
