[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentium"
version = "0.1.0"
description = "Structured Entropic Neural Transport with Integral Unified Manifold — a next-generation AI architecture"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2.0",
    "einops>=0.7.0",
    "scipy>=1.12.0",
]

[project.optional-dependencies]
full = [
    "transformers>=4.40.0",
    "datasets>=2.18.0",
    "tokenizers>=0.19.0",
]
train = [
    "transformers>=4.40.0",
    "datasets>=2.18.0",
    "wandb>=0.17.0",
    "tqdm>=4.66.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]
flash = [
    "flash-attn>=2.5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sentium*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
